# oss-repo-template

./: index.md
labs/lab-01/: lab01.md
labs/lab-02/: lab02.md
labs/lab03/: lab03.md
labs/lab04/: lab04.md
labs/lab05/: lab05.md
labs/lab05/Files&Images/Step1/: CMakeListsStep1.txt  tutorial.cxx
labs/lab05/Files&Images/Step2/: CMakeLists.txt  tutorial.cxx
labs/lab05/Files&Images/Step4/: CMakeLists.txt
labs/lab05/Files&Images/Step5/: CMakeListsMathFunctions.txt
labs/lab06/: lab06.md
labs/lab06/lab06code/: plot_words4.py  plot_words_orderless.py
labs/lab07/: lab07.md
labs/lab08/: lab08.md
labs/lab09/: lab09.md
labs/lab10/: lab10.md
